update documentation after changes in simulate_data()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(simulate_data)
 import(dplyr)
 import(ggplot2)
 import(tidyr)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(stats,fisher.test)
 importFrom(stats,kruskal.test)
 importFrom(stats,p.adjust)
