Fix allocate_samples() failing with non-default id_column when blocking_variable is set
The id_column validation ran after the column was already renamed to
"sample_id", so the check always failed. Moved validation before the
rename and removed the redundant check from the blocking_variable block.

Also coerce sample_id to character at input to prevent type mismatch
errors when padding rows (which use character IDs like "padding1") are
bound to data with integer IDs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ import(tidyr)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
+importFrom(rlang,.data)
 importFrom(stats,fisher.test)
 importFrom(stats,kruskal.test)
 importFrom(stats,p.adjust)
